--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nativephp/php-bin",
+    "name": "miguelenes1985/php-bin",
     "description": "PHP binaries used by the NativePHP framework",
     "keywords": [
         "nativephp",
