--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -149,7 +149,7 @@ jobs:
         if: steps.cache-spc-downloads.outputs.cache-hit != 'true'
         run: |
           cd ../static-php-cli
-          ./bin/${{ env.SPC_BINARY }} download --with-php=${{ matrix.version }} --for-extensions "${{ env.PHP_EXTENSIONS }}" --with-openssl11 --for-libs "${{ env.PHP_EXTENSIONS }}"
+          ./bin/${{ env.SPC_BINARY }} download --with-php=${{ matrix.version }} --for-extensions "${{ env.PHP_EXTENSIONS }}" --prefer-pre-built
           cd ../php-bin
 
       - name: Build PHP
