--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         version: ["8.4"]
-        os: [ "macos-13", "macos-latest", "ubuntu-latest", "ubuntu-24.04-arm" ]
+        os: [ "ubuntu-latest", "ubuntu-24.04-arm" ]
 
     continue-on-error: true
 
