Add version field to composer.json
Added the "version" field with a value of "1.0.0" to the composer.json file. This ensures the package has a defined version, improving clarity and compatibility with dependency management tools.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "miguelenes1985/php-bin",
     "description": "PHP binaries used by the NativePHP framework",
+    "version": "1.0.0",
     "keywords": [
         "nativephp",
         "php"
